# mod.hpp

./: .editorconfig  CMakeLists.txt
cmake/: CompileOptions.cmake
examples/: CMakeLists.txt
examples/arithmetic/: CMakeLists.txt  main.cpp
include/: algorithm.hpp  mod.hpp  number.hpp  power.hpp
